# mjai

./: .gitignore  README.md  TODO.md  bot.py  pyproject.toml  rust_mjai_arena.py  rust_mjai_bot.py  rust_mjai_engine.py
docs/: mjai_clean_room_port.md
docs/mjai.app/: highlevel-api.md  mjai-protocol.md  overview.md  quickstart.md  rule.md
native_runtime/: Cargo.toml  Dockerfile.musl
native_runtime/src/: bot_runtime.rs  lib.rs  main.rs  mjai_bot_state.rs  mjai_oracle_adapter.rs
native_runtime/tests/: mjai_contract.rs
tests/: test_build_mjai_dataset.py  test_rust_mjai_arena.py  test_rust_mjai_bot.py  test_rust_mjai_engine.py  test_rust_mjai_game.py
tools/: build_mjai_dataset.py  cli.py  evaluate_checkpoint.py  export_onnx.py  init_policy_checkpoint.py  mjai_oracle.py  profile_async_training.py  train_reinforce.py  validate_competition_image.py
tools/fixtures/: competition_call_choice.jsonl  competition_riichi_discard.jsonl
train/: __init__.py  async_self_play.py  async_training_bot.py  checkpoints.py  evaluation.py  inference_spec.py  policy_net.py  profiling.py  self_play.py  training_bot.py  training_config.py  training_ui.py
