[project]
name = "mjai-rulebase-bot"
version = "0.1.0"
description = "A rule-based bot for mjai.app."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "loguru>=0.7.3",
    "mjai>=0.2.1",
]

[project.optional-dependencies]
train = [
    "onnx>=1.17,<2.0",
    "torch>=2.2,<2.6",
]

[tool.uv]
package = false