[project]
name = "mjai-rulebase-bot"
version = "0.1.0"
description = "A rule-based bot for mjai.app."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "loguru>=0.7.3",
]

[project.optional-dependencies]
train = [
    "mjai>=0.2.1",
    "onnx>=1.21.0",
    "rich>=14.3.3",
    "torch>=2.10.0",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true